--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,7 @@ body {
   padding-top: 70px;
 }
 .blur {
+  cursor: help;
   border-radius: 4px;
   width:100%;
   height:100%;
@@ -11,4 +12,13 @@ body {
   -ms-filter: blur(4px);
   -o-filter: blur(4px);
   filter: blur(4px);
+}
+.hint {
+  cursor: help;
+}
+
+.blur a {
+  color: black;
+  text-decoration: none;
+  cursor: help;
 }
