Made a Howto 'project'

--- a/templates/main.html
+++ b/templates/main.html
@@ -130,7 +130,7 @@ projectAdvert.createdCallback = function() {
   // To get the buttons working
   $(this).find('.do').click(function() {
     if(! $(this).parents('.description-container').hasClass('faded')) {
-      window.location.href = 'projects/howto/coming-soon.html';
+      window.location.href = 'projects/howto/';
     }
   })
 }
